<resources>
    <string name="app_name">Nirvana</string>
    <string name="login">Логин</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="authentication">аутентификация</string>
    <string name="ErorLogin">Не корректный логин</string>
    <string name="ErorPassword">Не корректный пароль</string>
    <string name="google_play_unavailable">Сервисы Google Play недоступны</string>
    <string name="erorAuthorization">Неверный логин или пароль</string>
    <string name="erorConnect">Ошибка подключения</string>
    <string name="repeat_password">Повторите пароль </string>
    <string name="Invalidlogin">Не корректный пароль </string>
    <string name="InvalidPassword">неверный пароль </string>
    <string name="loadData">Пожалуйста подождите идёт загрузка данных</string>
    <string name="create_new_post">Создание поста</string>
    <string name="enter_your_post_content">Введите текст</string>
    <string name="create">Опубликовать</string>
    <string name="progress"> в процессе</string>
    <string name="repost_repost">Не могу сделать репост репоста</string>
    <string name="creat_repost">Создание поста</string>
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="download_post">загрузка поста</string>
    <string name="error_occured">Произошла ошибка</string>
    <string name="post_created_successfully">Пост создан</string>
    <string name="error_upload">Ошибка в загрузке изображения</string>
    <string name="change_password">Изменить пароль</string>
    <string name="forgot_password">Смена пароля</string>
    <string name="enter_phone_number">Введите свой номер телефона</string>
    <string name="uploading_profile_photo">Загрузить или изменить  фото профиля -> </string>
    <string name="change_your_profile_photo">Изменить фото профиля </string>
    <string name="new_password"> Введите новый пароль </string>
    <string name="repeat_new_password"> Повторите новый пароль </string>


</resources>